Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
             <section id="challenges" class="page-section content-section">
                 <div class="container">
-                    <h2>// CTF Playground</h2>
+                    <h2>// HackerZone -> CTF Playground</h2>
                     <div class="ctf-redirect-box">
                         <div class="ctf-icon">🏴‍☠️</div>
                         <h3>Learn Ethical Hacking - Hands On!</h3>
@@ -167,8 +167,8 @@
                             <span>✓ Network Exploitation</span>
                             <span>✓ Cryptography Puzzles</span>
                         </p>
-                        <a href="https://github.com/Vansh-Visaria" class="btn-ctf" id="ctf-platform-link" target="_blank" rel="noopener noreferrer">
-                            View on GitHub →
+                        <a href="https://hackerzone-ctfplatform.onrender.com/" class="btn-ctf" id="ctf-platform-link" target="_blank" rel="noopener noreferrer">
+                            View HackerZone →
                         </a>
                         <p class="ctf-note">New challenges added regularly. Perfect for beginners starting their cybersecurity journey!</p>
                     </div>
@@ -254,3 +254,4 @@
 </body>
 
 </html>
+
